fix: Layout issue on Game Archives page

--- a/src/app/screens/game-archives/game-archives-screen.component.scss
+++ b/src/app/screens/game-archives/game-archives-screen.component.scss
@@ -15,7 +15,7 @@ $container-max-width: calc($pgn-viewer-width * 3 + $lcc-space--xs * 6);
     margin: 0 $lcc-space--sm;
 
     @include respond-to('gt-sm') {
-      margin: 0;
+      margin: auto;
     }
   }
 
